--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
+arrow-csv = "42.0.0"
+clap = { version = "4.3.5", features = ["derive"] }
+datafusion = "26.0.0"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.97"
+tokio = "1.28.2"
